# bevy_game

./: .gitignore  Cargo.toml
src/: camera.rs  debug.rs  main.rs  map.rs  player.rs  util.rs
src/map/: chunk.rs  chunk_position.rs  config.rs  position.rs  tile_kind.rs  tile_type.rs
src/player/: coord_display.rs  tilt.rs  walk_animation.rs
