[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
bevy_egui = "0.27.0"
imageproc = "0.23.0"
rand = "0.8.5"
rayon = "1.10.0"
strum = { version = "0.26.2", features = ["derive"] }
worldgen = "0.5.3"

[dependencies.image]
version = "0.24.7"
default-features = false

[dev-dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
